@@ -49,7 +49,7 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
      * Test {@link ConditionPriorityBlockingQueue#take()} when a single object is in queue.
      */
     public void testTake() throws InterruptedException {
-        Integer one = new Integer(1);
+        Integer one = Integer.valueOf(1);
         mQueue.add(one);
         assertEquals(one, mQueue.take());
         assertNull(mQueue.poll());
@@ -60,8 +60,8 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
      * verify objects are returned in expected order.
      */
     public void testTake_priority() throws InterruptedException {
-        Integer one = new Integer(1);
-        Integer two = new Integer(2);
+        Integer one = Integer.valueOf(1);
+        Integer two = Integer.valueOf(2);
         mQueue.add(two);
         mQueue.add(one);
         assertEquals(one, mQueue.take());
@@ -75,8 +75,8 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
     public void testTake_fifo() throws InterruptedException {
         ConditionPriorityBlockingQueue<Integer> fifoQueue =
             new ConditionPriorityBlockingQueue<Integer>();
-        Integer one = new Integer(1);
-        Integer two = new Integer(2);
+        Integer one = Integer.valueOf(1);
+        Integer two = Integer.valueOf(2);
         fifoQueue.add(two);
         fifoQueue.add(one);
         assertEquals(two, fifoQueue.take());
@@ -89,8 +89,8 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
      * objects in inverse order.
      */
     public void testTake_priorityReverse() throws InterruptedException {
-        Integer one = new Integer(1);
-        Integer two = new Integer(2);
+        Integer one = Integer.valueOf(1);
+        Integer two = Integer.valueOf(2);
         mQueue.add(one);
         mQueue.add(two);
         assertEquals(one, mQueue.take());
@@ -102,7 +102,7 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
      * Test {@link ConditionPriorityBlockingQueue#take()} when object is not initially present.
      */
     public void testTake_delayedAdd() throws InterruptedException {
-        final Integer one = new Integer(1);
+        final Integer one = Integer.valueOf(1);
         Thread delayedAdd = new Thread() {
             @Override
             public void run() {
@@ -113,6 +113,7 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
                 mQueue.add(one);
             }
         };
+        delayedAdd.setName(getClass().getCanonicalName());
         delayedAdd.start();
         assertEquals(one, mQueue.take());
         assertNull(mQueue.poll());
@@ -123,8 +124,8 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
      * initially present.
      */
     public void testTake_matcher_delayedAdd() throws InterruptedException {
-        final Integer one = new Integer(1);
-        final Integer two = new Integer(2);
+        final Integer one = Integer.valueOf(1);
+        final Integer two = Integer.valueOf(2);
         mQueue.add(two);
         Thread delayedAdd = new Thread() {
             @Override
@@ -136,6 +137,7 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
                 mQueue.add(one);
             }
         };
+        delayedAdd.setName(getClass().getCanonicalName());
         delayedAdd.start();
         assertEquals(one, mQueue.take(new OneMatcher()));
         assertNull(mQueue.poll(new OneMatcher()));
@@ -146,8 +148,8 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
      * Test {@link ConditionPriorityBlockingQueue#take(IMatcher)} when multiple threads are waiting
      */
     public void testTake_multiple_matchers() throws InterruptedException {
-        final Integer one = new Integer(1);
-        final Integer second_one = new Integer(1);
+        final Integer one = Integer.valueOf(1);
+        final Integer second_one = Integer.valueOf(1);
 
         Thread waiter = new Thread() {
             @Override
@@ -159,6 +161,7 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
                 }
             }
         };
+        waiter.setName(getClass().getCanonicalName() + "#testTake_multiple_matchers");
         waiter.start();
         Thread waiter2 = new Thread() {
             @Override
@@ -169,6 +172,7 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
                 }
             }
         };
+        waiter2.setName(getClass().getCanonicalName() + "#testTake_multiple_matchers");
         waiter2.start();
 
         Thread delayedAdd = new Thread() {
@@ -181,6 +185,7 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
                 mQueue.add(one);
             }
         };
+        delayedAdd.setName(getClass().getCanonicalName() + "#testTake_multiple_matchers");
         delayedAdd.start();
         Thread delayedAdd2 = new Thread() {
             @Override
@@ -192,6 +197,7 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
                 mQueue.add(second_one);
             }
         };
+        delayedAdd2.setName(getClass().getCanonicalName() + "#testTake_multiple_matchers");
         delayedAdd2.start();
 
         // wait for blocked threads to die. This test will deadlock if failed
@@ -221,8 +227,8 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
      * doesn't.
      */
     public void testPoll_condition() {
-        Integer one = new Integer(1);
-        Integer two = new Integer(2);
+        Integer one = Integer.valueOf(1);
+        Integer two = Integer.valueOf(2);
         mQueue.add(one);
         mQueue.add(two);
         assertEquals(one, mQueue.poll(new OneMatcher()));
@@ -234,8 +240,8 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
      * matches, and one doesn't.
      */
     public void testPoll_time_condition() throws InterruptedException {
-        Integer one = new Integer(1);
-        Integer two = new Integer(2);
+        Integer one = Integer.valueOf(1);
+        Integer two = Integer.valueOf(2);
         mQueue.add(one);
         mQueue.add(two);
         assertEquals(one, mQueue.poll(100, TimeUnit.MILLISECONDS, new OneMatcher()));
@@ -249,8 +255,8 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
     public void testPoll_fifo_condition() {
         ConditionPriorityBlockingQueue<Integer> fifoQueue =
             new ConditionPriorityBlockingQueue<Integer>();
-        Integer one = new Integer(1);
-        Integer two = new Integer(2);
+        Integer one = Integer.valueOf(1);
+        Integer two = Integer.valueOf(2);
         fifoQueue.add(two);
         fifoQueue.add(one);
         assertEquals(one, fifoQueue.poll(new OneMatcher()));
@@ -262,8 +268,8 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
      * added in inverse order.
      */
     public void testPoll_condition_reverse() {
-        Integer one = new Integer(1);
-        Integer two = new Integer(2);
+        Integer one = Integer.valueOf(1);
+        Integer two = Integer.valueOf(2);
         mQueue.add(two);
         mQueue.add(one);
         assertEquals(one, mQueue.poll(new OneMatcher()));
@@ -293,6 +299,7 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
                 }
             }
         };
+        iterator.setName(getClass().getCanonicalName() + "#testModificationOnIterating");
         iterator.start();
         for (int i = 0; i < 10 && throwables[0] == null; i++) {
             queue.add(i);
@@ -310,13 +317,7 @@ public class ConditionPriorityBlockingQueueTest extends TestCase {
 
         @Override
         public int compare(Integer o1, Integer o2) {
-            if (o1 == o2) {
-                return 0;
-            } else if (o1 < o2) {
-                return -1;
-            } else {
-                return 1;
-            }
+            return o1.compareTo(o2);
         }
 
     }
